--- a/src/Web/Dockerfile
+++ b/src/Web/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:16-alpine
 
 WORKDIR /app
-COPY package.json yarn.lock ./
+COPY package*.json yarn.lock ./
 
 RUN yarn install
 
-COPY next.config.js .
+COPY . .
 
 CMD [ "yarn", "dev" ]
+
+EXPOSE 3000
