Change volumes to entire Web folder

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -51,9 +51,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./Web/pages:/app/pages
-      - ./Web/styles:/app/styles
-      - ./Web/public:/app/public
+      - ./Web:/app
 
 volumes:
   micro-ecommerce_catalog-db:
