--- a/src/.env.example
+++ b/src/.env.example
@@ -4,3 +4,4 @@ CATALOG_DB=<YOUR_CATALOG_DB>
 CATALOG_USER=<YOUR_CATALOG_USER>
 CATALOG_ROOT_PASSWORD=<YOUR_CATALOG_ROOT_PASSWORD>
 CATALOG_USER_PASSWORD=<YOUR_CATALOG_USER_PASSWORD>
+CATALOG_API_URL=<YOUR_CATALOG_API_URL>
