--- a/src/Services/Cart/package.json
+++ b/src/Services/Cart/package.json
@@ -10,6 +10,8 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "redis": "^4.6.4",
     "typescript": "^4.9.5"
