--- a/src/Services/Cart/package.json
+++ b/src/Services/Cart/package.json
@@ -10,15 +10,17 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
-    "@types/cookie-parser": "^1.4.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "redis": "^4.6.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
+    "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   }
