--- a/src/ApiGateway/package.json
+++ b/src/ApiGateway/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
