--- a/src/Services/Cart/package.json
+++ b/src/Services/Cart/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "redis": "^4.6.4",
