--- a/src/ApiGateway/package.json
+++ b/src/ApiGateway/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "ts-node": "^10.9.1",
