--- a/src/Services/Catalog/package.json
+++ b/src/Services/Catalog/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "dev:migrate:start": "prisma migrate deploy && yarn run dev"
+    "dev:migrate:start": "prisma migrate dev && yarn run dev"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
