--- a/src/Services/User/package.json
+++ b/src/Services/User/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
