--- a/src/Services/User/package.json
+++ b/src/Services/User/package.json
@@ -7,11 +7,13 @@
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "nodemon": "^2.0.21",
