--- a/src/ApiGateway/package.json
+++ b/src/ApiGateway/package.json
@@ -12,11 +12,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
