--- a/src/ApiGateway/package.json
+++ b/src/ApiGateway/package.json
@@ -9,17 +9,19 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
-    "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20"
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.2",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
